--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -33,5 +33,7 @@ server {
   error_page 500 502 503 504 /500.html;
   client_max_body_size 4G;
   keepalive_timeout 10;
+
+  try_files $uri/index.html $uri @unicorn;
   
 }
