ajuste nginx system

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -14,12 +14,11 @@ server {
     add_header Cache-Control public;
   }
 
-  location ~ ^/(assets|system|uploads)/ {
+  location ~ ^/(assets)/ {
     gzip_static on;
     expires 1y;
     add_header Cache-Control public;
     add_header ETag "";
-    #break;
   }
   
   location @unicorn {
